--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ HEADLESS='true'
 
 GH_TOKEN='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'
 ALGOLIAKEY='9c4018bdcedb542cb7a0c9e5453aa7b0'
-marka='rmg'
+marka='abiyesarayi'
 #
