--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ LOCAL='TRUE'
 HEADLESS='true'
 GH_TOKEN='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'
 ALGOLIAKEY='9c4018bdcedb542cb7a0c9e5453aa7b0'
-marka='esergiyim'
+marka='ilmio'
